<resources>
    <string name="app_name">Products Shop</string>
    <string name="item_sale">SALE</string>
    <string name="pleaseWait">Please wait.</string>
    <string name="productDescription">Description</string>
    <string name="longDescription">A 4K television with a large screen and vibrant colors. Enjoy high-resolution content with excellent picture quality.</string>
    <string name="addToCart">Add to cart</string>
    <string name="ourPrice">Our price: %1$.2f $</string>
    <string name="totalInStock">Total in stock: %1$d</string>
    <string name="colors">Colors:</string>
    <string name="titleInformation">Information</string>
    <string name="titleCartTotalSum">Total sum is %1$.2f $</string>
    <string name="actionBtnOpenCart">open</string>
    <string name="actionBtnClearCart">clear</string>
    <string name="snackBarItemInCart">Item in cart</string>
</resources>