<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Smartphone" />

                <RatingBar
                    android:id="@+id/ratingProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rating="3.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/baseline_android_24" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productDescription"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLongDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@string/longDescription" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="@string/totalInStock" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@string/ourPrice" />

            <Spinner
                android:id="@+id/spinnerColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_add_shopping_cart_24"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/addToCart" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>